# yokatlas-web-scraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: cli.py
yokatlas/: __init__.py  cli.py  logger.py  utils.py
yokatlas/bachelor/: __init__.py  core.py  parser.py  scraper.py
yokatlas/utils/: __init__.py  json.py  net.py  text.py
