[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yokatlas-web-scraper"
version = "1.0.0"
description = "Fetch university programs from YÖK."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "heyits2038" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "halo>=0.0.31",
    "loguru>=0.7.3",
    "pyfiglet>=1.0.3",
    "questionary>=2.1.0",
    "selenium>=4.34.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ipykernel>=6.30.0",
]

[project.scripts]
yokatlas = "yokatlas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yokatlas*"]
